--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <title>Главная</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="settings.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="cards.css">
+    <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/cards.css">
     <meta name="viewport" content="width=devixe-width, initial-scale=1.0">
 </head>
 
@@ -103,6 +103,10 @@
                 <div class="cards__container _container">
                     <div class="cards__body" id="cards__body">
                     </div>
+                    <div id="answer_container">
+                        <div id="answer"></div>
+                        <div id="result"></div>
+                    </div>
                 </div>
             </div>
             <div id="score_sidebar">
@@ -110,7 +114,7 @@
             </div>
         </main>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
